--- a/Selhome/selhome.css
+++ b/Selhome/selhome.css
@@ -1,8 +1,8 @@
 * {
-  font-family: "Montserrat", sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 13px;
   font-weight: 900;
-  letter-spacing: -1px;
+  letter-spacing: 0px;
   color: rgb(0, 0, 0);
 }
 
@@ -12,7 +12,9 @@ body, h1, h2, h3, h4, h5, h6, ul, p {
 }
 
 nav .menu {
-  width: 100%;
+  width: 99.8%;
+  position: relative;
+  z-index: 99;
 }
 nav .menu__list {
   display: flex;
@@ -120,7 +122,7 @@ nav .menu__list--dropdown_usaq {
 nav .menu__list--dropdown_milli {
   visibility: hidden;
   transition: linear 0.15s;
-  transform: translateX(-200px) scaleX(0.1) translateY(-200px) scaleY(0.1);
+  transform: translateX(-50px) scaleX(0.1) translateY(-50px) scaleY(0.1);
   opacity: 0;
   display: flex;
   justify-content: center;
@@ -193,20 +195,24 @@ nav .menu__list--dropdown_endirim {
   left: 0px;
   z-index: 2;
   border: 1px solid rgb(128, 128, 128);
-  width: 200px;
+  width: 210px;
   height: 130px;
   background-color: rgb(255, 255, 255);
 }
 nav .dropdown-columns {
   padding-left: 5px;
   padding-right: 5px;
-  margin: 0px 20px 0px;
+  margin: 0px 10px 0px;
+  display: flex;
+  flex-direction: column;
+  padding: 20px 10px 20px;
 }
 nav .ul-padding {
   margin-left: 10px;
 }
 nav .dropdown-list {
   list-style: none;
+  margin-bottom: 10px;
 }
 nav .dropdown-link {
   text-decoration: none;
@@ -216,57 +222,225 @@ nav .dropdown-link {
 }
 nav .dropdown-header {
   font-weight: 900;
+  margin-bottom: 10px;
 }
 nav .dropdown__image-metbex {
   -o-object-fit: cover;
      object-fit: cover;
   width: 100%;
-  height: 100px;
+  height: 400px;
 }
 nav .dropdown__image-hamam {
   -o-object-fit: cover;
      object-fit: cover;
   width: 100%;
-  height: 100px;
+  height: 250px;
 }
 nav .dropdown__image-yataq {
   -o-object-fit: cover;
      object-fit: cover;
   width: 100%;
-  height: 100px;
+  height: 250px;
 }
 nav .dropdown__image-dekor {
   -o-object-fit: cover;
      object-fit: cover;
   width: 100%;
-  height: 100px;
+  height: 350px;
 }
 nav .dropdown__image-usaq {
   -o-object-fit: cover;
      object-fit: cover;
   width: 100%;
-  height: 100px;
+  height: 120px;
 }
 nav .dropdown__image-milli {
   -o-object-fit: cover;
      object-fit: cover;
   width: 100%;
-  height: 100px;
+  height: 200px;
 }
 nav .search {
   display: flex;
   justify-content: center;
   align-items: center;
-  -moz-column-gap: 10px;
-       column-gap: 10px;
-  width: 100%;
+  -moz-column-gap: 100px;
+       column-gap: 100px;
+  width: 99.8%;
   position: relative;
   background-color: #ba958b;
-  border: 1px solid red;
   height: 60px;
 }
 nav .search__logo {
-  width: 160px;
+  width: 200px;
+}
+nav .search__searchbar--panel {
+  width: 450px;
+  height: 40px;
+  border-radius: 5px;
+  outline: none;
+  border: none;
+  padding-left: 15px;
+  font-weight: 500;
+  letter-spacing: 0.5px;
+}
+nav .search__searchbar--button {
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  border: none;
+  background-color: transparent;
+  position: relative;
+  left: -40px;
+}
+nav .search__searchbar--button:hover .fa-magnifying-glass {
+  color: #ba958b;
+}
+nav .search__searchbar .fa-magnifying-glass {
+  scale: 2;
+}
+nav .search__langbar--selector {
+  width: 140px;
+  height: 25px;
+  background-color: #ba958b;
+  filter: brightness(1.05);
+  border: none;
+  border-radius: 2px;
+  color: rgb(255, 255, 255);
+  font-weight: 500;
+  outline: none;
+}
+nav .search__langbar .fa-globe {
+  position: relative;
+  left: -40px;
+  color: rgb(128, 128, 128);
+}
+nav .search__userpanel {
+  display: flex;
+  -moz-column-gap: 20px;
+       column-gap: 20px;
+  position: relative;
+  left: -95px;
+}
+nav .search__userpanel .dropdown--shopping {
+  visibility: hidden;
+  width: 260px;
+  height: 160px;
+  position: absolute;
+  border: 1px solid rgb(128, 128, 128);
+  background-color: rgb(255, 255, 255);
+  top: 63px;
+  left: -180px;
+  z-index: 1;
+  transition: linear 0.15s;
+  opacity: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+nav .search__userpanel .dropdown--shopping_info {
+  width: 90%;
+  height: 30px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+nav .search__userpanel .dropdown--shopping_cart {
+  border: 1px solid #ba958b;
+  color: #ba958b;
+  border-radius: 3px;
+  width: 90%;
+  height: 30px;
+  margin-bottom: 10px;
+  padding-top: 10px;
+  text-align: center;
+  text-decoration: none;
+}
+nav .search__userpanel .dropdown--shopping_purchase {
+  border: 1px solid #ba958b;
+  color: #ba958b;
+  border-radius: 3px;
+  width: 90%;
+  height: 30px;
+  padding-top: 10px;
+  text-align: center;
+  text-decoration: none;
+}
+nav .search__userpanel .dropdown--user {
+  visibility: hidden;
+  width: 260px;
+  height: 120px;
+  position: absolute;
+  border: 1px solid rgb(128, 128, 128);
+  background-color: rgb(255, 255, 255);
+  top: 63px;
+  left: -25px;
+  z-index: 1;
+  transition: linear 0.15s;
+  opacity: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+nav .search__userpanel .dropdown--user a {
+  border: 1px solid #ba958b;
+  text-decoration: none;
+  color: #ba958b;
+  padding: 20px 10px 20px;
+  border-radius: 3px;
+}
+nav .search__userpanel .fa-cart-shopping {
+  color: rgb(255, 255, 255);
+  position: relative;
+  padding: 20px 0px 20px;
+  transition: linear 0.15s;
+  transition: linear 0.15s;
+}
+nav .search__userpanel .fa-cart-shopping:hover {
+  color: rgb(255, 255, 128);
+  transition: linear 0.15s;
+}
+nav .search__userpanel .fa-cart-shopping:hover ~ .dropdown--shopping {
+  visibility: visible;
+  transition: linear 0.15s;
+  opacity: 1;
+}
+nav .search__userpanel .fa-cart-shopping__count {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  color: rgb(255, 255, 255);
+  background-color: #ba958b;
+  border: none;
+  position: absolute;
+  top: 34px;
+  left: 17px;
+}
+nav .search__userpanel .fa-heart {
+  color: rgb(255, 255, 255);
+  padding: 20px 0px 20px;
+}
+nav .search__userpanel .fa-heart:hover {
+  color: rgb(255, 255, 128);
+  transition: linear 0.15s;
+}
+nav .search__userpanel .fa-user {
+  color: rgb(255, 255, 255);
+  padding: 20px 0px 20px;
+  transition: linear 0.15s;
+}
+nav .search__userpanel .fa-user:hover {
+  color: rgb(255, 255, 128);
+  transition: linear 0.15s;
+}
+nav .search__userpanel .fa-user:hover ~ .dropdown--user {
+  visibility: visible;
+  transition: linear 0.15s;
+  opacity: 1;
 }
 nav .menu__list--chevrons:hover {
   color: #ba958b;
@@ -309,4 +483,425 @@ nav .highlight-list_sam:hover ~ .highlight-header_sam {
   color: #ba958b;
   background-color: rgb(250, 250, 250);
   transition: linear 0.05s;
+}
+
+main .collections {
+  width: 99.8%;
+  height: 740px;
+  position: relative;
+}
+main .collections #btn-purchase:hover {
+  transition: ease 0.15s;
+  color: #ba958b;
+  background-color: white;
+  border: 1px solid #ba958b;
+}
+main .collections__carousel {
+  width: 100%;
+  height: 65%;
+}
+main .collections__carousel--bagkolleksiyasi {
+  position: relative;
+  display: none;
+  transition: linear 0.2s;
+  opacity: 0;
+}
+main .collections__carousel--bagkolleksiyasi img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 481px;
+}
+main .collections__carousel--bagkolleksiyasi div {
+  position: absolute;
+  top: 50%;
+  left: 10%;
+}
+main .collections__carousel--bagkolleksiyasi div strong {
+  text-transform: uppercase;
+  font-size: 48px;
+  color: rgb(255, 255, 255);
+  font-weight: 900;
+}
+main .collections__carousel--bagkolleksiyasi div a {
+  text-decoration: none;
+}
+main .collections__carousel--bagkolleksiyasi div a button {
+  background-color: #ba958b;
+  border: none;
+  border-radius: 3px;
+  color: rgb(255, 255, 255);
+  width: 140px;
+  height: 40px;
+  font-weight: 500;
+  margin-top: 10px;
+}
+main .collections__carousel--organikkolleksiyasi {
+  position: relative;
+  display: none;
+  transition: linear 0.2s;
+  opacity: 0;
+}
+main .collections__carousel--organikkolleksiyasi img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 481px;
+}
+main .collections__carousel--organikkolleksiyasi div {
+  position: absolute;
+  top: 50%;
+  left: 10%;
+}
+main .collections__carousel--organikkolleksiyasi div strong {
+  text-transform: uppercase;
+  font-size: 48px;
+  color: rgb(255, 255, 255);
+  font-weight: 900;
+}
+main .collections__carousel--organikkolleksiyasi div p {
+  font-size: 20px;
+  color: rgb(255, 255, 255);
+  font-weight: 500;
+}
+main .collections__carousel--organikkolleksiyasi div a {
+  text-decoration: none;
+}
+main .collections__carousel--organikkolleksiyasi div a button {
+  background-color: #ba958b;
+  border: none;
+  border-radius: 3px;
+  color: rgb(255, 255, 255);
+  width: 140px;
+  height: 40px;
+  font-weight: 500;
+  margin-top: 10px;
+}
+main .collections__carousel--agrengincazibesi {
+  position: relative;
+  display: none;
+  transition: linear 0.2s;
+  opacity: 0;
+}
+main .collections__carousel--agrengincazibesi img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 481px;
+}
+main .collections__carousel--agrengincazibesi div {
+  position: absolute;
+  top: 50%;
+  left: 10%;
+}
+main .collections__carousel--agrengincazibesi div strong {
+  text-transform: uppercase;
+  font-size: 48px;
+  color: rgb(255, 255, 255);
+  font-weight: 900;
+}
+main .collections__carousel--agrengincazibesi div a {
+  text-decoration: none;
+}
+main .collections__carousel--agrengincazibesi div a button {
+  background-color: #ba958b;
+  border: none;
+  border-radius: 3px;
+  color: rgb(255, 255, 255);
+  width: 140px;
+  height: 40px;
+  font-weight: 500;
+  margin-top: 10px;
+}
+main .collections__carousel .bag:checked ~ .collections__carousel--bagkolleksiyasi {
+  display: block;
+  transition: linear 0.2s;
+  opacity: 1;
+}
+main .collections__carousel .bag:checked ~ .collections__carousel--bagkolleksiyasi + .collections__carousel--organikkolleksiyasi {
+  display: none;
+}
+main .collections__carousel .bag:checked ~ .collections__carousel--bagkolleksiyasi + .collections__carousel--agrengincazibesi {
+  display: none;
+}
+main .collections__carousel .org:checked ~ .collections__carousel--organikkolleksiyasi {
+  display: block;
+  transition: linear 0.2s;
+  opacity: 1;
+}
+main .collections__carousel .org:checked ~ .collections__carousel--organikkolleksiyasi + .collections__carousel--bagkolleksiyasi {
+  display: none;
+}
+main .collections__carousel .org:checked ~ .collections__carousel--organikkolleksiyasi + .collections__carousel--agrengincazibesi {
+  display: none;
+}
+main .collections__carousel .ag:checked ~ .collections__carousel--agrengincazibesi {
+  display: block;
+  transition: linear 0.2s;
+  opacity: 1;
+}
+main .collections__carousel .ag:checked ~ .collections__carousel--agrengincazibesi + .collections__carousel--bagkolleksiyasi {
+  display: none;
+}
+main .collections__carousel .ag:checked ~ .collections__carousel--agrengincazibesi + .collections__carousel--organikkolleksiyasi {
+  display: none;
+}
+main .collections__carousel #bag {
+  position: absolute;
+  top: 60%;
+  left: 47%;
+  z-index: 5;
+  accent-color: #ba958b;
+  transition: linear 0.2s;
+  scale: 2;
+}
+main .collections__carousel #org {
+  position: absolute;
+  top: 60%;
+  left: 50%;
+  z-index: 5;
+  accent-color: #ba958b;
+  transition: linear 0.2s;
+  scale: 2;
+}
+main .collections__carousel #ag {
+  position: absolute;
+  top: 60%;
+  left: 53%;
+  z-index: 5;
+  accent-color: #ba958b;
+  transition: linear 0.2s;
+  scale: 2;
+}
+main .collections__container {
+  width: 100%;
+  height: 35%;
+  display: flex;
+  -moz-column-gap: 0.5%;
+       column-gap: 0.5%;
+}
+main .collections__container--yataqdesti {
+  width: 33%;
+  margin: 0.5% 0% 0.5%;
+  position: relative;
+}
+main .collections__container--yataqdesti a {
+  width: 100%;
+  text-decoration: none;
+  z-index: 2;
+}
+main .collections__container--yataqdesti a div {
+  position: absolute;
+  top: 46%;
+  left: 38%;
+}
+main .collections__container--yataqdesti a div strong {
+  color: rgb(255, 255, 255);
+  font-weight: 900;
+  font-size: 20px;
+  text-transform: uppercase;
+}
+main .collections__container--yataqdesti a div button {
+  background-color: #ba958b;
+  border: none;
+  border-radius: 3px;
+  color: rgb(255, 255, 255);
+  width: 140px;
+  height: 40px;
+  font-weight: 500;
+  margin-top: 10px;
+  visibility: hidden;
+}
+main .collections__container--yataqdesti a img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 243px;
+  z-index: 1;
+}
+main .collections__container--yataqdesti a:hover div button {
+  visibility: visible;
+}
+main .collections__container--hamak {
+  width: 33%;
+  margin: 0.5% 0% 0.5%;
+  position: relative;
+}
+main .collections__container--hamak a {
+  width: 100%;
+  text-decoration: none;
+  z-index: 2;
+}
+main .collections__container--hamak a div {
+  position: absolute;
+  top: 46%;
+  left: 38%;
+}
+main .collections__container--hamak a div strong {
+  color: rgb(255, 255, 255);
+  font-weight: 900;
+  font-size: 20px;
+  text-transform: uppercase;
+}
+main .collections__container--hamak a div button {
+  background-color: #ba958b;
+  border: none;
+  border-radius: 3px;
+  color: rgb(255, 255, 255);
+  width: 140px;
+  height: 40px;
+  font-weight: 500;
+  margin-top: 10px;
+  visibility: hidden;
+}
+main .collections__container--hamak a img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 243px;
+  z-index: 1;
+}
+main .collections__container--hamak a:hover div button {
+  visibility: visible;
+}
+main .collections__container--yemekdesti {
+  width: 33%;
+  margin: 0.5% 0% 0.5%;
+  position: relative;
+}
+main .collections__container--yemekdesti a {
+  width: 100%;
+  text-decoration: none;
+  z-index: 2;
+}
+main .collections__container--yemekdesti a div {
+  position: absolute;
+  top: 46%;
+  left: 38%;
+}
+main .collections__container--yemekdesti a div strong {
+  color: rgb(255, 255, 255);
+  font-weight: 900;
+  font-size: 20px;
+  text-transform: uppercase;
+}
+main .collections__container--yemekdesti a div button {
+  background-color: #ba958b;
+  border: none;
+  border-radius: 3px;
+  color: rgb(255, 255, 255);
+  width: 140px;
+  height: 40px;
+  font-weight: 500;
+  margin-top: 10px;
+  visibility: hidden;
+}
+main .collections__container--yemekdesti a img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 243px;
+  z-index: 1;
+}
+main .collections__container--yemekdesti a:hover div button {
+  visibility: visible;
+}
+main .topsells {
+  width: 99.8%;
+  height: 640px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+main .topsells .topsells__title {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  row-gap: 20px;
+}
+main .topsells .topsells__title h1 {
+  font-size: 30px;
+  font-weight: 800;
+  letter-spacing: 1px;
+}
+main .topsells .topsells__title p {
+  letter-spacing: 1px;
+  font-weight: 500;
+}
+main .topsells .topsells__cardscontainer {
+  display: flex;
+  width: 90%;
+  justify-content: center;
+  -moz-column-gap: 10px;
+       column-gap: 10px;
+}
+main .topsells .topsells__cardscontainer--card {
+  position: relative;
+}
+main .topsells .topsells__cardscontainer--card a {
+  text-decoration: none;
+}
+main .topsells .topsells__cardscontainer--card a :hover ~ .fa-heart {
+  display: block;
+  position: absolute;
+  top: 18px;
+  left: 256px;
+  scale: 2;
+  background-color: rgb(250, 250, 250);
+  padding: 2px;
+  opacity: 0.8;
+}
+main .topsells .topsells__cardscontainer--card a :hover ~ .fa-cart-plus {
+  display: block;
+  position: absolute;
+  top: 60px;
+  left: 255px;
+  scale: 2;
+  background-color: rgb(250, 250, 250);
+  padding: 2px;
+  opacity: 0.8;
+}
+main .topsells .topsells__cardscontainer--card a img {
+  width: 290px;
+  height: 285px;
+}
+main .topsells .topsells__cardscontainer--card a .fa-heart {
+  display: none;
+}
+main .topsells .topsells__cardscontainer--card a .fa-heart:hover {
+  display: block;
+  color: rgb(255, 255, 128);
+  position: absolute;
+  top: 60px;
+  left: 256px;
+  scale: 2;
+  background-color: rgb(250, 250, 250);
+  padding: 2px;
+  opacity: 0.8;
+}
+main .topsells .topsells__cardscontainer--card a .fa-cart-plus {
+  display: none;
+}
+main .topsells .topsells__cardscontainer--card a .fa-cart-plus:hover {
+  display: block;
+  color: rgb(255, 255, 128);
+  position: absolute;
+  top: 60px;
+  left: 255px;
+  scale: 2;
+  background-color: rgb(250, 250, 250);
+  padding: 2px;
+  opacity: 0.8;
+}
+main .topsells .topsells__cardscontainer--card a h3 {
+  font-weight: 500;
+  font-size: larger;
+  text-align: center;
+}
+main .topsells .topsells__cardscontainer--card a strong {
+  color: #ba958b;
+  font-size: larger;
+  display: flex;
+  justify-content: center;
 }/*# sourceMappingURL=selhome.css.map */
