--- a/03 ■► JS DOM/tasks/2023 → 02 → 27/Task 5/05 ► simple game.css
+++ b/03 ■► JS DOM/tasks/2023 → 02 → 27/Task 5/05 ► simple game.css
@@ -1,10 +1,86 @@
-* body, * html, * h1, * h2, * h3, * h4, * h5, * h6, * p, * ul {
-  margin: 0px;
-  padding: 0px;
+* html, * body, * h1, * h2, * h3, * h4, * h5, * h6, * ul, * p {
+  margin: 0;
+  padding: 0;
 }
 * li {
   list-style: none;
 }
 * a {
   text-decoration: none;
+}
+
+body {
+  background: linear-gradient(to top, rgb(255, 128, 64), rgb(255, 255, 128), rgb(255, 128, 64));
+}
+
+.container {
+  border: 5px solid rgb(0, 0, 0);
+  background-color: rgb(255, 255, 255);
+  width: 400px;
+  height: 600px;
+  overflow: hidden;
+  z-index: 1;
+}
+
+.falling-balls {
+  border: 2px solid rgb(0, 0, 0);
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  animation: fallingBalls 3s ease-in 0s 1;
+  background: radial-gradient(rgb(128, 16, 255), rgb(16, 16, 255));
+  filter: drop-shadow(0px 0px 10px rgba(0, 0, 0, 0.5));
+  z-index: 2;
+  visibility: hidden;
+  cursor: pointer;
+}
+.falling-balls:active {
+  background: radial-gradient(rgb(255, 0, 128), rgb(0, 128, 255));
+}
+
+@keyframes fallingBalls {
+  0% {
+    top: -50px;
+  }
+  2% {
+    visibility: visible;
+  }
+  100% {
+    top: 610px;
+  }
+}
+.start-button {
+  position: absolute;
+  top: 280px;
+  left: 120px;
+  width: 160px;
+  height: 40px;
+  border: 2px solid rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
+  background-color: rgb(128, 16, 255);
+  cursor: pointer;
+  font-weight: 600;
+  transition: linear 0.25s;
+}
+.start-button:hover {
+  filter: invert(1);
+  scale: 1.1 1.4;
+  transition: linear 0.25s;
+}
+.start-button:active {
+  filter: brightness(0);
+}
+
+.hidden {
+  display: none;
+}
+
+.your-score {
+  position: absolute;
+  z-index: 5;
+  top: 10px;
+  left: 10px;
+  font-size: 20px;
+  font-weight: 600;
 }/*# sourceMappingURL=05 ► simple game.css.map */
