--- a/03 ■► JS DOM/CODERS JS project (02-17-2023 to 03-10-2023)/hailhydra-homepage.scss
+++ b/03 ■► JS DOM/CODERS JS project (02-17-2023 to 03-10-2023)/hailhydra-homepage.scss
@@ -1,11 +1,12 @@
-// ————————————————————► CUSTOM VALUES start ◄————————————————————
+// ========== ========== ========== ========== ========== ========== ==========
+// ► CUSTOM VALUES start ◄
 .empty-class {
     $default_color: rgb(8,8,8);
     $links_color: rgb(255,0,0);
 }
-// ————————————————————► CUSTOM VALUES end ◄————————————————————
-
-// ————————————————————► ZEROING DEFAULTS start ◄————————————————————
+// ► CUSTOM VALUES end ◄
+// ========== ========== ========== ========== ========== ========== ==========
+// ► ZEROING DEFAULTS start ◄
 * {
     font-family: 'Montserrat', sans-serif;
     html, body, h1, h2, h3, h4, h5, h6, p, ul {
@@ -25,13 +26,41 @@
         }
     }
 }
-// ————————————————————► ZEROING DEFAULTS end ◄————————————————————
+// ► ZEROING DEFAULTS end ◄
+// ========== ========== ========== ========== ========== ========== ==========
+// ► HEADER start ◄
 
-// ————————————————————► . start ◄————————————————————
-// ————————————————————► . end ◄————————————————————
+// ► HEADER end ◄
+// ========== ========== ========== ========== ========== ========== ==========
+// ► SECTION 1 start ◄
 
-// ————————————————————► HIDING CLASS start ◄————————————————————
+// ► SECTION 1 end ◄
+// ========== ========== ========== ========== ========== ========== ==========
+// ► SECTION 2 start ◄
+
+// ► SECTION 2 end ◄
+// ========== ========== ========== ========== ========== ========== ==========
+// ► FOOTER start ◄
+#footer {}
+.footer {
+    &__columns {
+        &--headers {}
+        &--lists {}
+    }
+}
+.bottom {
+    &__rights {}
+    &__conditions {}
+}
+// ► FOOTER end ◄
+// ========== ========== ========== ========== ========== ========== ==========
+// ► POPUP WINDOWS start ◄
+
+// ► POPUP WINDOWS end ◄
+// ========== ========== ========== ========== ========== ========== ==========
+// ► HIDING CLASS start ◄
 .hidden {
     display: none;
 }
-// ————————————————————► HIDING CLASS end ◄————————————————————
+// ► HIDING CLASS end ◄
+// ========== ========== ========== ========== ========== ========== ==========
