--- a/04 ■► React/final-app/src/pages/ItemView/index.module.css
+++ b/04 ■► React/final-app/src/pages/ItemView/index.module.css
@@ -8,9 +8,139 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  padding: 140px 0px 0px 0px;
+  padding: 20px 0px 20px 0px;
 }
 .itemview__container {
-  width: 95%;
-  border: 1px solid red;
+  width: 1400px;
+  height: auto;
+  border: 1px solid var(--borders-color);
+  display: flex;
+}
+.itemview__container_thumbnails {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  border: none;
+  width: 100px;
+  height: 450px;
+  overflow: auto;
+}
+.itemview__container_thumbnails__buttons {
+  width: 100px;
+  height: 100px;
+  border: 1px solid var(--borders-color);
+}
+.itemview__container_thumbnails__buttons_content {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.itemview__container_bigframe {
+  border: 1px solid var(--borders-color);
+  width: 450px;
+  height: 450px;
+}
+.itemview__container_bigframe__content {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.itemview__container_information {
+  width: 850px;
+  border: 1px solid var(--borders-color);
+  display: flex;
+  gap: 20px;
+  flex-direction: column;
+  padding: 10px;
+}
+.itemview__container_information__title {
+  font-size: 28px;
+  font-weight: 600;
+}
+.itemview__container_information__category {
+  font-size: 24px;
+  opacity: 0.5;
+  font-style: italic;
+}
+.itemview__container_information__description {
+  font-size: 20px;
+}
+.itemview__container_information__rating {
+  display: flex;
+  width: 200px;
+  justify-content: space-between;
+}
+.itemview__container_information__rating_stars {
+  color: var(--link-hover-color);
+}
+.itemview__container_information__rating_point {
+  font-weight: 600;
+}
+.itemview__container_information__price {
+  font-size: 24px;
+  font-weight: 600;
+}
+.itemview__container_information__buttons {
+  display: flex;
+  gap: 10px;
+}
+.itemview__container_information__buttons_buy {
+  background-color: var(--buttons-color);
+  color: var(--link-color);
+  width: auto;
+  height: 30px;
+  border: 1px solid var(--borders-color);
+  transition: var(--quick-fx);
+  border-radius: 4px;
+  padding: 5px;
+}
+.itemview__container_information__buttons_buy:hover {
+  background-color: var(--buttons-hover-color);
+  color: var(--link-hover-color);
+}
+.itemview__container_information__buttons_buy:active {
+  transition: var(--instant-fx);
+  background-color: var(--buttons-active-color);
+  color: var(--link-active-color);
+}
+.itemview__container_information__buttons_2fav {
+  background-color: var(--buttons-color);
+  color: var(--link-color);
+  width: auto;
+  height: 30px;
+  border: 1px solid var(--borders-color);
+  transition: var(--quick-fx);
+  border-radius: 4px;
+  padding: 5px;
+}
+.itemview__container_information__buttons_2fav:hover {
+  background-color: var(--buttons-hover-color);
+  color: var(--link-hover-color);
+}
+.itemview__container_information__buttons_2fav:active {
+  transition: var(--instant-fx);
+  background-color: var(--buttons-active-color);
+  color: var(--link-active-color);
+}
+.itemview__container_information__buttons_2fcart {
+  background-color: var(--buttons-color);
+  color: var(--link-color);
+  width: auto;
+  height: 30px;
+  border: 1px solid var(--borders-color);
+  transition: var(--quick-fx);
+  border-radius: 4px;
+  padding: 5px;
+}
+.itemview__container_information__buttons_2fcart:hover {
+  background-color: var(--buttons-hover-color);
+  color: var(--link-hover-color);
+}
+.itemview__container_information__buttons_2fcart:active {
+  transition: var(--instant-fx);
+  background-color: var(--buttons-active-color);
+  color: var(--link-active-color);
 }/*# sourceMappingURL=index.module.css.map */
