--- a/04 ■► React/final-app/src/pages/ItemView/index.module.scss
+++ b/04 ■► React/final-app/src/pages/ItemView/index.module.scss
@@ -28,10 +28,138 @@
     // justify-content: center;
     align-items: center;
     flex-direction: column;
-    padding: 140px 0px 0px 0px;
+    padding: 20px 0px 20px 0px;
     &__container {
-        width: 95%;
-        border: 1px solid red;
+        width: 1400px;
+        height: auto;
+        border: 1px solid var(--borders-color);
+        display: flex;
+        &_thumbnails {
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            align-items: center;
+            border: none;
+            width: 100px;
+            height: 450px;
+            overflow: auto;
+            &__buttons {
+                width: 100px;
+                height: 100px;
+                border: 1px solid var(--borders-color);
+                &_content {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
+            }
+        }
+        &_bigframe {
+            border: 1px solid var(--borders-color);
+            width: 450px;
+            height: 450px;
+            &__content {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+        }
+        &_information {
+            width: 850px;
+            border: 1px solid var(--borders-color);
+            display: flex;
+            gap: 20px;
+            flex-direction: column;
+            padding: 10px;
+            &__title {
+                font-size: 28px;
+                font-weight: 600;
+            }
+            &__category {
+                font-size: 24px;
+                opacity: 0.5;
+                font-style: italic;
+            }
+            &__description {
+                font-size: 20px;
+            }
+            &__rating {
+                display: flex;
+                width: 200px;
+                justify-content: space-between;
+                &_stars {
+                    color: var(--link-hover-color);
+                }
+                &_point {
+                    font-weight: 600;
+                }
+            }
+            &__price {
+                font-size: 24px;
+                font-weight: 600;
+            }
+            &__buttons {
+                display: flex;
+                gap: 10px;
+                &_buy {
+                    background-color: var(--buttons-color);
+                    color: var(--link-color);
+                    width: auto;
+                    height: 30px;
+                    border: 1px solid var(--borders-color);
+                    transition: var(--quick-fx);
+                    border-radius: 4px;
+                    padding: 5px;
+                    &:hover {
+                        background-color: var(--buttons-hover-color);
+                        color: var(--link-hover-color);
+                    }
+                    &:active {
+                        transition: var(--instant-fx);
+                        background-color: var(--buttons-active-color);
+                        color: var(--link-active-color);
+                    }
+                }
+                &_2fav {
+                    background-color: var(--buttons-color);
+                    color: var(--link-color);
+                    width: auto;
+                    height: 30px;
+                    border: 1px solid var(--borders-color);
+                    transition: var(--quick-fx);
+                    border-radius: 4px;
+                    padding: 5px;
+                    &:hover {
+                        background-color: var(--buttons-hover-color);
+                        color: var(--link-hover-color);
+                    }
+                    &:active {
+                        transition: var(--instant-fx);
+                        background-color: var(--buttons-active-color);
+                        color: var(--link-active-color);
+                    }
+                }
+                &_2fcart {
+                    background-color: var(--buttons-color);
+                    color: var(--link-color);
+                    width: auto;
+                    height: 30px;
+                    border: 1px solid var(--borders-color);
+                    transition: var(--quick-fx);
+                    border-radius: 4px;
+                    padding: 5px;
+                    &:hover {
+                        background-color: var(--buttons-hover-color);
+                        color: var(--link-hover-color);
+                    }
+                    &:active {
+                        transition: var(--instant-fx);
+                        background-color: var(--buttons-active-color);
+                        color: var(--link-active-color);
+                    }
+                }
+            }
+        }
     }
 }
 // ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬
