--- a/04 ■► React/final-app/src/pages/MyFav/index.module.scss
+++ b/04 ■► React/final-app/src/pages/MyFav/index.module.scss
@@ -19,7 +19,7 @@
 .myfav {
     z-index: 1;
     width: 100%; // 100%
-    height: 600px;
+    height: auto;
     // border: 1px solid var(--borders-color);
     border: none;
     background-color: var(--default-bg-color);
@@ -28,10 +28,78 @@
     // justify-content: center;
     align-items: center;
     flex-direction: column;
-    padding: 140px 0px 0px 0px;
+    padding: 30px 0px 10px 0px; // top right bottom left
+    &__topside {
+        width: 1300px;
+        height: 50px;
+        border: none;
+        border-bottom: 2px solid var(--borders-color);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        opacity: 0.9;
+        padding: 10px 0px 10px 0px; // top right bottom left
+        &_header {
+            font-size: 24px;
+            font-weight: 600;
+        }
+    }
     &__container {
-        width: 95%;
-        border: 1px solid red;
+        width: 1400px;
+        border: none;
+        border-left: 4px solid var(--borders-color);
+        border-right: 4px solid var(--borders-color);
+        height: auto;
+        padding: 20px 45px 20px 45px; // top right bottom left
+        margin-top: 50px;
+        display: flex;
+        align-items: flex-start;
+        justify-content: flex-start;
+        gap: 20px;
+        flex-wrap: wrap;
+        &_cards {
+            width: 200px;
+            height: 260px;
+            border: 1px solid var(--borders-color);
+            border-radius: 6px;
+            overflow: hidden;
+            padding: 5px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 10px;
+            flex-direction: column;
+            background-color: var(--default-bg-color);
+            cursor: pointer;
+            transition: var(--slow-fx);
+            &:hover {
+                scale: 1.02;
+                filter: drop-shadow(0 0 8px var(--filter-shadow-color));
+                transform: rotateY(360deg);
+            }
+            &:active {
+                scale: 1.05;
+                transition: var(--quick-fx);
+            }
+            &__image {
+                width: 100%;
+                height: 190px;
+                border: 1px solid var(--borders-color);
+                &_content {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
+            }
+            &_title {
+                width: 100%;
+                font-weight: 600;
+            }
+            &__price {
+                width: 100%;
+                text-align: center;
+            }
+        }
     }
 }
 // ▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬▬
